		* Fixed #1113: removed add COURIER_CONF_DIR and stored userdb to AUTHLIB_CONF_DIR path
		* Fixed #1126: do not add all domains into the MTA domains list
	- GUI:
		* Fixed #919: IP Management UI
		* Fixed #1072: open directory (ftp class)
		* Fixed #1115: ispcp/gui/include/ispcp-config.php under FreeBSD
		* Fixed #1116: error in client template in ftp choose dir
		* Fixed #1127: Order of menu entries in webtools
	- SETUP:
		* Fixed #1114: FreeBSD ispcp-setup-methods should be changed
		* Fixed #1123: database revision should be 1 for updaters
	- DISTS:
		* Fixed #1117: (Gentoo) /etc/init.d/ispcp_network: line 155: log_warning_msg: command not found
		* Fixed: (OpenSuse) Serveral install issues
	- LANGUAGES:
		* Updated Czech, Danish, French

2008-03-18 Benedikt Heintel
	- SETUP
		* Fixed #1119: Update Spelling Mistake

2008-03-16 Benedikt Heintel
	- RELEASE ispCP ω Omega 1.0.0 RC4

2008-03-13 Benedikt Heintel
	- SETUP:
		* Fixed #942: ERROR: Undefined intput data, bt: |{PHP_VERSION}|, et: |{PHP_VERSION}|, src !
		* Fixed #1097: (quick fix) ispcp-vrl-traff-correction generates high load on mysql db -> DB locked
		* Fixed #1106: BSDmakefile Setup not copy some of its file
		* Fixed #1111: Variables not parsed in /etc/apache2/sites-enabled/00_master.conf
		* Updated: a lot of Makefiles
	- DISTS:
		* Fixed #1107: (FreeBSD) fix minor configuration in dist FreeBSD and setup patch
		* Fixed #1108: (FreeBSD) fix minor configuration in dist FreeBSD and setup patch #2
		* Updated all Distros

2008-03-12 Christian Hernmarck
	- DISTS:
		* openSuSE (10.3): corrected the INSTALL doc again (!!), and the Makefile for courier...

2008-03-12 Benedikt Heintel
	- CONFIGS:
		* Updated: to latest program versions

2008-03-12 Jochen Manz
	- SETUP:
		* Fixed #1105: Disable proftpd rc in fbsd distro

2008-03-10 Benedikt Heintel
	- DOCS:
		* Updated all INSTALL files

2008-03-10 Christian Hernmarck
	- SETUP:
		* Fixed #1099: 1042 - ispcp-setup compilation errors