@@ -29,7 +29,8 @@ $tpl->define_dynamic('def_language', 'page');
 $theme_color = $cfg['USER_INITIAL_THEME'];
 
 $tpl->assign(
-	array('TR_ADMIN_SETTINGS_PAGE_TITLE' => tr('ispCP - Admin/Settings'),
+	array(
+		'TR_ADMIN_SETTINGS_PAGE_TITLE' => tr('ispCP - Admin/Settings'),
 		'THEME_COLOR_PATH' => "../themes/$theme_color",
 		'THEME_CHARSET' => tr('encoding'),
 		'ISP_LOGO' => get_logo($_SESSION['user_id'])
@@ -37,19 +38,39 @@ $tpl->assign(
 	);
 
 if (isset($_POST['uaction']) && $_POST['uaction'] == 'apply') {
-	$lostpassword = clean_input($_POST['lostpassword']);
-	$lostpassword_timeout = clean_input($_POST['lostpassword_timeout']);
-	$bruteforce = clean_input($_POST['bruteforce']);
-	$bruteforce_between = clean_input($_POST['bruteforce_between']);
-	$bruteforce_max_login = clean_input($_POST['bruteforce_max_login']);
-	$bruteforce_block_time = clean_input($_POST['bruteforce_block_time']);
-	$bruteforce_between_time = clean_input($_POST['bruteforce_between_time']);
-	$user_initial_lang = clean_input($_POST['def_language']);
-	$support_system = clean_input($_POST['support_system']);
-	$domain_rows_per_page = clean_input($_POST['domain_rows_per_page']);
+	$lostpassword 						= $_POST['lostpassword'];
+	$lostpassword_timeout 				= clean_input($_POST['lostpassword_timeout']);
+	$passwd_chars 						= clean_input($_POST['passwd_chars']);
+	$passwd_strong 						= $_POST['passwd_strong'];
+	$bruteforce 						= $_POST['bruteforce'];
+	$bruteforce_between 				= $_POST['bruteforce_between'];
+	$bruteforce_max_login				= clean_input($_POST['bruteforce_max_login']);
+	$bruteforce_block_time 				= clean_input($_POST['bruteforce_block_time']);
+	$bruteforce_between_time 			= clean_input($_POST['bruteforce_between_time']);
+	$bruteforce_max_capcha				= clean_input($_POST['bruteforce_max_capcha']);
+	$create_default_email_addresses 	= $_POST['create_default_email_addresses'];
+	$hard_mail_suspension 				= $_POST['hard_mail_suspension'];
+	$user_initial_lang 					= $_POST['def_language'];
+	$support_system 					= $_POST['support_system'];
+	$domain_rows_per_page 				= clean_input($_POST['domain_rows_per_page']);
+	// change Loglevel to constant:
+	switch ($_POST['log_level']) {
+		case "E_USER_NOTICE":
+			$log_level = E_USER_NOTICE;
+			break;
+		case "E_USER_WARNING":
+			$log_level = E_USER_WARNING;
+			break;
+		case "E_USER_ERROR":
+			$log_level = E_USER_ERROR;
+			break;
+		default:
+			$log_level = E_USER_OFF;
+	} // switch
 
-	if ((!is_number($lostpassword_timeout)) OR (!is_number($bruteforce_max_login))
-			OR (!is_number($bruteforce_block_time)) OR (!is_number($bruteforce_between_time))
+	if ((!is_number($lostpassword_timeout)) OR (!is_number($passwd_chars))
+			OR (!is_number($bruteforce_max_login)) OR (!is_number($bruteforce_block_time))
+			OR (!is_number($bruteforce_between_time)) OR (!is_number($bruteforce_max_capcha))
 			OR (!is_number($domain_rows_per_page))) {
 		set_page_message(tr('ERROR: Only positive numbers are allowed !'));
 	} else if ($domain_rows_per_page < 1) {
@@ -57,20 +78,28 @@ if (isset($_POST['uaction']) && $_POST['uaction'] == 'apply') {
 	} else {
 		setConfig_Value('LOSTPASSWORD', $lostpassword);
 		setConfig_Value('LOSTPASSWORD_TIMEOUT', $lostpassword_timeout);
+		setConfig_Value('PASSWD_CHARS', $passwd_chars);
+		setConfig_Value('PASSWD_STRONG', $passwd_strong);
 		setConfig_Value('BRUTEFORCE', $bruteforce);
 		setConfig_Value('BRUTEFORCE_BETWEEN', $bruteforce_between);
 		setConfig_Value('BRUTEFORCE_MAX_LOGIN', $bruteforce_max_login);
 		setConfig_Value('BRUTEFORCE_BLOCK_TIME', $bruteforce_block_time);
 		setConfig_Value('BRUTEFORCE_BETWEEN_TIME', $bruteforce_between_time);
+		setConfig_Value('BRUTEFORCE_MAX_CAPTCHA', $bruteforce_max_capcha);
+		setConfig_Value('CREATE_DEFAULT_EMAIL_ADDRESSES', $create_default_email_addresses);
+		setConfig_Value('HARD_MAIL_SUSPENSION', $hard_mail_suspension);
 		setConfig_Value('USER_INITIAL_LANG', $user_initial_lang);
 		setConfig_Value('ISPCP_SUPPORT_SYSTEM', $support_system);
 		setConfig_Value('DOMAIN_ROWS_PER_PAGE', $domain_rows_per_page);
+		setConfig_Value('LOG_LEVEL', $log_level);
 		set_page_message(tr('Settings saved !'));
 	}
 }
 
 $tpl->assign(
-	array('LOSTPASSWORD_TIMEOUT_VALUE' => $cfg['LOSTPASSWORD_TIMEOUT'],
+	array(
+		'LOSTPASSWORD_TIMEOUT_VALUE' => $cfg['LOSTPASSWORD_TIMEOUT'],
+		'PASSWD_CHARS' => $cfg['PASSWD_CHARS'],
 		'BRUTEFORCE_MAX_LOGIN_VALUE' => $cfg['BRUTEFORCE_MAX_LOGIN'],
 		'BRUTEFORCE_BLOCK_TIME_VALUE' => $cfg['BRUTEFORCE_BLOCK_TIME'],
 		'BRUTEFORCE_BETWEEN_TIME_VALUE' => $cfg['BRUTEFORCE_BETWEEN_TIME'],
@@ -82,36 +111,85 @@ $tpl->assign(
 gen_def_language($tpl, $sql, $cfg['USER_INITIAL_LANG']);
 
 if ($cfg['LOSTPASSWORD']) {
-	$tpl->assign('LOSTPASSWORD_SELECTED_ON', 'selected');
+	$tpl->assign('LOSTPASSWORD_SELECTED_ON', 'selected="selected"');
 	$tpl->assign('LOSTPASSWORD_SELECTED_OFF', '');
 } else {
 	$tpl->assign('LOSTPASSWORD_SELECTED_ON', '');
-	$tpl->assign('LOSTPASSWORD_SELECTED_OFF', 'selected');
+	$tpl->assign('LOSTPASSWORD_SELECTED_OFF', 'selected="selected"');
+}
+if ($cfg['PASSWD_CHARS']) {
+	$tpl->assign('{PASSWD_STRONG_ON}', 'selected="selected"');
+	$tpl->assign('{PASSWD_STRONG_OFF}', '');
+} else {
+	$tpl->assign('{PASSWD_STRONG_ON}', '');
+	$tpl->assign('{PASSWD_STRONG_OFF}', 'selected="selected"');
 }
 
 if ($cfg['BRUTEFORCE']) {
-	$tpl->assign('BRUTEFORCE_SELECTED_ON', 'selected');
+	$tpl->assign('BRUTEFORCE_SELECTED_ON', 'selected="selected"');
 	$tpl->assign('BRUTEFORCE_SELECTED_OFF', '');
 } else {
 	$tpl->assign('BRUTEFORCE_SELECTED_ON', '');
-	$tpl->assign('BRUTEFORCE_SELECTED_OFF', 'selected');
+	$tpl->assign('BRUTEFORCE_SELECTED_OFF', 'selected="selected"');
 }
 
 if ($cfg['BRUTEFORCE_BETWEEN']) {
-	$tpl->assign('BRUTEFORCE_BETWEEN_SELECTED_ON', 'selected');
+	$tpl->assign('BRUTEFORCE_BETWEEN_SELECTED_ON', 'selected="selected"');
 	$tpl->assign('BRUTEFORCE_BETWEEN_SELECTED_OFF', '');
 } else {
 	$tpl->assign('BRUTEFORCE_BETWEEN_SELECTED_ON', '');
-	$tpl->assign('BRUTEFORCE_BETWEEN_SELECTED_OFF', 'selected');
+	$tpl->assign('BRUTEFORCE_BETWEEN_SELECTED_OFF', 'selected="selected"');
 }
 
 if ($cfg['ISPCP_SUPPORT_SYSTEM']) {
-	$tpl->assign('SUPPORT_SYSTEM_SELECTED_ON', 'selected');
+	$tpl->assign('SUPPORT_SYSTEM_SELECTED_ON', 'selected="selected"');
 	$tpl->assign('SUPPORT_SYSTEM_SELECTED_OFF', '');
 } else {
 	$tpl->assign('SUPPORT_SYSTEM_SELECTED_ON', '');
-	$tpl->assign('SUPPORT_SYSTEM_SELECTED_OFF', 'selected');
+	$tpl->assign('SUPPORT_SYSTEM_SELECTED_OFF', 'selected="selected"');
 }
+
+if ($cfg['CREATE_DEFAULT_EMAIL_ADDRESSES']) {
+	$tpl->assign('CREATE_DEFAULT_EMAIL_ADDRESSES_ON', 'selected="selected"');
+	$tpl->assign('CREATE_DEFAULT_EMAIL_ADDRESSES_OFF', '');
+} else {
+	$tpl->assign('CREATE_DEFAULT_EMAIL_ADDRESSES_ON', '');
+	$tpl->assign('CREATE_DEFAULT_EMAIL_ADDRESSES_OFF', 'selected="selected"');
+}
+
+if ($cfg['HARD_MAIL_SUSPENSION']) {
+	$tpl->assign('HARD_MAIL_SUSPENSION_ON', 'selected="selected"');
+	$tpl->assign('HARD_MAIL_SUSPENSION_OFF', '');
+} else {
+	$tpl->assign('HARD_MAIL_SUSPENSION_ON', '');
+	$tpl->assign('HARD_MAIL_SUSPENSION_OFF', 'selected="selected"');
+}
+
+switch($cfg['LOG_LEVEL']){
+	case E_USER_OFF:
+		$tpl->assign('LOG_LEVEL_SELECTED_OFF', 'selected="selected"');
+		$tpl->assign('LOG_LEVEL_SELECTED_NOTICE', '');
+		$tpl->assign('LOG_LEVEL_SELECTED_WARNING', '');
+		$tpl->assign('LOG_LEVEL_SELECTED_ERROR', '');
+		break;
+	case E_USER_NOTICE:
+		$tpl->assign('LOG_LEVEL_SELECTED_OFF', '');
+		$tpl->assign('LOG_LEVEL_SELECTED_NOTICE', 'selected="selected"');
+		$tpl->assign('LOG_LEVEL_SELECTED_WARNING', '');
+		$tpl->assign('LOG_LEVEL_SELECTED_ERROR', '');
+		break;
+	case E_USER_WARNING:
+		$tpl->assign('LOG_LEVEL_SELECTED_OFF', '');
+		$tpl->assign('LOG_LEVEL_SELECTED_NOTICE', '');
+		$tpl->assign('LOG_LEVEL_SELECTED_WARNING', 'selected="selected"');
+		$tpl->assign('LOG_LEVEL_SELECTED_ERROR', '');
+		break;
+	default:
+		$tpl->assign('LOG_LEVEL_SELECTED_OFF', '');
+		$tpl->assign('LOG_LEVEL_SELECTED_NOTICE', '');
+		$tpl->assign('LOG_LEVEL_SELECTED_WARNING', '');
+		$tpl->assign('LOG_LEVEL_SELECTED_ERROR', 'selected="selected"');
+} // switch
 
 /*
  *
@@ -122,11 +200,15 @@ gen_admin_mainmenu($tpl, $cfg['ADMIN_TEMPLATE_PATH'] . '/main_menu_settings.tpl'
 gen_admin_menu($tpl, $cfg['ADMIN_TEMPLATE_PATH'] . '/menu_settings.tpl');
 
 $tpl->assign(
-	array('TR_GENERAL_SETTINGS' => tr('General settings'),
+	array(
+		'TR_GENERAL_SETTINGS' => tr('General settings'),
 		'TR_SETTINGS' => tr('Settings'),
 		'TR_MESSAGE' => tr('Message'),
 		'TR_LOSTPASSWORD' => tr('Lost password'),
 		'TR_LOSTPASSWORD_TIMEOUT' => tr('Activation link expire time (minutes)'),
+		'TR_PASSWORD_SETTINGS'=> tr('Password settings') ,
+		'TR_PASSWD_STRONG'=> tr('Use strong Passwords') ,
+		'TR_PASSWD_CHARS' => tr('Password lenght'),
 		'TR_BRUTEFORCE' => tr('Bruteforce detection'),
 		'TR_BRUTEFORCE_BETWEEN' => tr('Block time between logins'),
 		'TR_BRUTEFORCE_MAX_LOGIN' => tr('Max number of login attempts'),
@@ -134,23 +216,31 @@ $tpl->assign(
 		'TR_BRUTEFORCE_BETWEEN_TIME' => tr('Block time between logins (seconds)'),
 		'TR_BRUTEFORCE_MAX_CAPTCHA' => tr('Max number of CAPTCHA validation attempts'),
 		'TR_OTHER_SETTINGS' => tr('Other settings'),
+		'TR_MAIL_SETTINGS' => tr('E-Mail settings'),
+		'TR_CREATE_DEFAULT_EMAIL_ADDRESSES' => tr('Create default E-Mail addresses'),
+		'TR_HARD_MAIL_SUSPENSION' => tr('E-Mail accounts are hard suspended'),
 		'TR_USER_INITIAL_LANG' => tr('Default language'),
 		'TR_SUPPORT_SYSTEM' => tr('Support system'),
 		'TR_ENABLED' => tr('Enabled'),
 		'TR_DISABLED' => tr('Disabled'),
 		'TR_APPLY_CHANGES' => tr('Apply changes'),
 		'TR_SERVERPORTS' => tr('Server ports'),
-		'TR_DOMAIN_ROWS_PER_PAGE' => tr('Domains per page')
+		'TR_DOMAIN_ROWS_PER_PAGE' => tr('Domains per page'),
+		'TR_LOG_LEVEL' => tr('Log Level'),
+		'TR_E_USER_OFF' => tr('Disabled'),
+		'TR_E_USER_NOTICE' => tr('Notices, Warnings and Errors'),
+		'TR_E_USER_WARNING' => tr('Warnings and Errors'),
+		'TR_E_USER_ERROR' => tr('Errors'),
 		)
 	);
 
 gen_page_message($tpl);
 
 $tpl->parse('PAGE', 'page');
-
 $tpl->prnt();
 
-if ($cfg['DUMP_GUI_DEBUG']) dump_gui_debug();
+if ($cfg['DUMP_GUI_DEBUG'])
+	dump_gui_debug();
 
 unset_messages();
 
